--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ Set-Content -Encoding utf8 .env.example @'
 # Example only — DO NOT put real keys here
 OPENAI_API_KEY=your-openai-key-here
 NEWS_API_KEY=your-newsapi-key-here
-'@
+UNSPLASH_ACCESS_KEY=your-unsplash-key-here
